changed paths to global variables

--- a/YOLO_fine_tune.ipynb
+++ b/YOLO_fine_tune.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_IMAGE = r\"f1-dataset/train/images/1-2023-Brazilian-GP-FP1-20_jpg.rf.2f3d25867c8e1661f6070ae5a84c6dd4.jpg\"\n",
+    "IMAGE_FOLDER = r\"C:\\Users\\victo\\Desktop\\Documents\\Tercer año\\Segundo Cuatrimestre\\F1_yolo_team_detection\\f1-dataset\\train\\images\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +55,7 @@
     }
    ],
    "source": [
-    "# Ver versión de PyTorch\n",
+    "# See Pytorch version\n",
     "print(f\"Versión de PyTorch: {torch.__version__}\")\n",
     "# Ver disponibilidad de CUDA\n",
     "print(f\"CUDA disponible: {torch.cuda.is_available()}\")\n",
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +100,7 @@
    "source": [
     "# Verificar si las imágenes se leen correctamente\n",
     "train_image = cv2.imread(\n",
-    "    \"../f1-strategy/f1-dataset/train/images/1-2023-Brazilian-GP-FP1-20_jpg.rf.2f3d25867c8e1661f6070ae5a84c6dd4.jpg\")\n",
+    "    TRAIN_IMAGE)\n",
     "if train_image is None:\n",
     "    print(\"Error al leer la imagen\")\n",
     "else:\n",
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +122,7 @@
    ],
    "source": [
     "# Definir la carpeta de imágenes\n",
-    "image_folder = \"C:/Users/victo/Desktop/Documents/Tercer año/Segundo Cuatrimestre/Finales/f1-strategy/f1-dataset/train/images\"\n",
+    "image_folder = IMAGE_FOLDER\n",
     "# Lista para almacenar los tamaños de las imágenes\n",
     "sizes = set()\n",
     "# Verificar el tamaño de cada imagen\n",
