strating training with a yolov12 small with 25 epochs for initial comparison

--- a/gap_calculation.ipynb
+++ b/gap_calculation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
     "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "# Load the Anti-Alpine optimized model\n",
-    "model = YOLO(\"../f1-strategy/weights/model_anti_alpine.pt\")\n",
+    "model = YOLO(\"weights/yolo_small_detection.pt\")\n",
     "model.to(DEVICE)"
    ]
   },
@@ -1209,14 +1209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cell 3: Run gap extraction with visualization\n",
     "def main_extract_gaps():\n",
     "    \"\"\"Extract gaps from the video at 10-second intervals and save to CSV\"\"\"\n",
-    "    video_path = \"../f1-strategy/data/videos/belgium_gp.f399.mp4\"\n",
+    "    video_path = \"videos/belgium_gp.f399.mp4\"\n",
     "    \n",
     "    # Run extraction with default 10-second interval, showing video\n",
     "    gap_data = extract_gaps_from_video(\n",
